chore: bruk felles parent pom for deps og bygg